<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/HRLabel"
                android:id="@+id/HeartRateLabel" android:layout_gravity="left|center_vertical" android:textSize="32dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hrvalue"
                android:id="@+id/hrvalue" android:layout_gravity="center" android:layout_column="1"
                android:textSize="32dp"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BPLabel"
                android:id="@+id/BPLabel" android:layout_gravity="left|center_vertical" android:textSize="32dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bpvalue"
                android:id="@+id/textView2" android:layout_column="1" android:textSize="32dp"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/O2Label"
                android:id="@+id/O2Label" android:layout_gravity="left|center_vertical" android:textSize="32dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/O2value"
                android:id="@+id/textView3" android:layout_column="1" android:textSize="32dp"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TempLabel"
                android:id="@+id/TempLabel" android:layout_gravity="left|center_vertical" android:textSize="32dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tempvalue"
                android:id="@+id/textView4" android:layout_column="1" android:textSize="32dp"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RRLabel"
                android:id="@+id/RespirationLabel" android:layout_gravity="left|center_vertical"
                android:textSize="32dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rrvalue"
                android:id="@+id/textView1" android:layout_column="1" android:textSize="32dp"/>
    </TableRow>
</TableLayout>